# ex-axum

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
src/: main.rs
