[package]
name = "axum-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }